Thu Jan 30 11:46:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (server_updated): After we send Created or
	Update-existing for a file, mark it as unchanged, in case we
	process it again.
	* sanity.sh (modules3): New tests, test for above fix.

	* logmsg.c (do_verify): Error return from fopen is NULL, not -1.
	Pass errno to error().

	* login.c [_CRAY]: Don't declare getpass.

Mon Jan 27 17:25:27 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* import.c (process_import_file): Fix freeing of rcs (Don't free
	it before we are done using it, and don't free it twice).

	* modules.c (cat_module): Allocate line right before we use
	it.  The previous code was wrong because the length of the
	s_h->rest changes between the time we allocate line and the time we
	sprintf s_h->rest into it.

Sun Jan 26 21:58:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* expand_path.c (expand_path): Revise to call expand_string as
	needed.  Nuke PATH_MAX.
	* find_names.c (find_dirs): Likewise.
	* import.c, lock.c: Nuke more PATH_MAX.

	* server.c (mkdir_p): Set retval to 0 at start of function.
	Previously it had been uninitialized for some cases.  Thanks are
	due to nightly testing for catching this one.

Sat Jan 25 21:34:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* subr.c, cvs.h (expand_string): New function.
	* rcs.c (getrcskey, getrcsrev): Call it.  This greatly reduces the
	number of calls to realloc if there is a very large file in the
	RCS file.  Credit goes to Mike Heath <mike@pswtech.com> for
	pointing out the problem and the basic solution (MIN_INCR,
	MAX_INCR); I adapted it into the separate function expand_string.
	* sanity.sh (big): New test helps insure this hasn't broken
	anything obvious.

Wed Jan 22 10:06:13 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* status.c (status_fileproc): Change message which is printed for
	T_MODIFIED and ts_conflict set, so that it doesn't say "unresolved