@@ -1,5 +1,8 @@
 Thu Jan 30 11:46:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* logmsg.c, main.c, mkmodules.c, modules.c, parseinfo.c, patch.c:
+	Nuke more PATH_MAX.
+
 	* server.c (server_updated): After we send Created or
 	Update-existing for a file, mark it as unchanged, in case we
 	process it again.
